--- a/templates/main.html
+++ b/templates/main.html
@@ -66,23 +66,23 @@
       <div style="clear:both;"></div>
 
       <h3>What's your destination?</h3>
-<!--       <form id="DestinationForm" method="post" action="/Main">
+      <form id="DestinationForm" method="post" action="/Main">
       <label for="destination"></label>
       <input type="text" id="destination" name="destination" size=55 style="float:left;height:30px;margin-left: 40px;margin-left:40px;margin-top: 29px">
       <input type="submit" id="destination-submit" style="float:left;margin-left:30px;width:40px; height:30px" value="Go" />
-      </form> -->
-
-      <form id="DestinationForm" method="get" action="mbta">
-      <label for="destination"></label>
-      <input type="text" id="destination" name="destination" size=55 style="float:left;height:30px;margin-left: 40px;margin-left:40px;margin-top: 29px">
-<!--       <input type="submit" id="destination-submit" style="float:left;margin-left:30px;width:40px; height:30px" value="Go" />
- -->  <input type="submit" style="float:left;margin-left:40px;background:#246703" value="See MBTA Options" />
-      <input type="submit" formaction="Lyftsummary" style="float:left;margin-left:40px;background:#ff00bf" value="See Lyft Options" />
-
       </form>
 
+<!--       <form id="DestinationForm" method="post" action="mbta">
+      <label for="destination"></label>
+      <input type="text" id="destination" name="destination" size=55 style="float:left;height:30px;margin-left: 40px;margin-left:40px;margin-top: 29px">
+      <input type="submit" id="destination-submit" style="float:left;margin-left:30px;width:40px; height:30px" value="Go" />
+  <input type="submit" style="float:left;margin-left:40px;background:#246703" value="See MBTA Options" />
+      <input type="submit" formaction="Lyftsummary" style="float:left;margin-left:40px;background:#ff00bf" value="See Lyft Options" />
+
+      </form> -->
+
       <div style="clear:both;"></div>
-      <br><br><br><!-- 
+      <br><br><br>
       <form action = "mbta" method="post">
         <input type="submit" style="float:left;margin-left:40px;background:#246703" value="See MBTA Options" />
       </form>
@@ -90,7 +90,7 @@
         <input type="submit" style="float:left;margin-left:40px;background:#ff00bf" value="See Lyft Options" />
       </form>
 
-      <div style="clear:both;"></div> -->
+      <div style="clear:both;"></div>
 
     </div>
 
