--- a/templates/mbta.html
+++ b/templates/mbta.html
@@ -64,6 +64,8 @@
       {% for your_list_element in mbta_info %}
             {% if 'miles' in your_list_element %}
                 <li style="margin-left:35px;margin-top:30px"><a href="http://www.google.com">{{ your_list_element }}</a> </li>
+            {% elif 'If you take' in your_list_element %}
+                <li style="margin-left:35px;margin-top:30px">{{your_list_element}}</li>
             {% else %}
                 <p style="font-size:14;margin-left:60px;margin-bottom:10px">{{ your_list_element }} </p>
             {% endif %}
